--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.2.11"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"aws-sdk": "^2.1616.0"
+	}
 }
