--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"aws-sdk": "^2.1616.0"
+		"aws-sdk": "^2.1616.0",
+		"nodemailer": "^6.9.13"
 	}
 }
